--- a/synthese/synthese.tex
+++ b/synthese/synthese.tex
@@ -29,6 +29,9 @@
 \part{Tests}
 \input{tests.tex}
 
+\part{Conclusion}
+\input{conclusion.tex}
+
 \newpage
 \bibliographystyle{plain}
 \bibliography{biblio}
