--- a/synthese/biblio.bib
+++ b/synthese/biblio.bib
@@ -19,7 +19,7 @@
 }
 @book{ahuj93,
 	address = {Englewood Cliffs, NJ},
-	author = {Ahuja, Ravindra K. and Magnanti, Thomas L. and Orlin, James B.},
+	author = {R. K. Ahuja and T. L. Magnanti and J. B. Orlin},
 	publisher = {Prentice Hall},
 	title = {Network Flows: Theory, Algorithms, and Applications},
 	year = {1993}
@@ -31,7 +31,7 @@
 	publisher={Dunod}
 }
 @ARTICLE{cher98,
-	author = {Joseph Cheriyan and Kurt Mehlhorn},
+	author = {J. Cheriyan and K. Mehlhorn},
 	title = {An Analysis of the Highest-Level Selection Rule in the Preflow-Push Max-Flow Algorithm},
 	journal = {Information Processing Letters},
 	year = {1998},
@@ -39,7 +39,7 @@
 	pages = {69--239}
 }
 @article{Ed72,
-	author = {Edmonds, Jack and Karp, Richard M.},
+	author = {J. Edmonds and R. M. Karp},
 	title = {Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems},
 	journal = {J. ACM},
 	volume = {19},
