--- a/synthese/synthese.tex
+++ b/synthese/synthese.tex
@@ -11,6 +11,7 @@
 \tableofcontents
 \newpage
 
+\part{Introduction}
 \input{introduction.tex}
 
 \part{Les algorithmes}
@@ -31,6 +32,8 @@
 
 \part{Conclusion}
 \input{conclusion.tex}
+
+\nocite{*}
 
 \newpage
 \bibliographystyle{plain}
